# glfw-glad-opengl-cmake-starter

./: .gitmodules  CMakeLists.txt  README.md
include/glad/: glad.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: glad.c  main  main.cpp
